--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,12 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      docker: 19
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 058264503354.dkr.ecr.us-east-1.amazonaws.com
+      - echo Logging in to ECR Public to avoid Docker Hub rate limits...
+      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
   build:
     commands:
       - echo Build started on `date`
